# doocs-json

./: .gitignore  README.md  doocs_json.cpp  doocs_json.h  meson.build
docker-demo/: Dockerfile  init.sh  start.sh  stop.sh
docker-demo/scripts/: init.sh  start.sh
doocs-types-test/: RPC_LIBNO  meson.build  types_test_CONF.TEMPLATE  types_test_server.conf
doocs-types-test/debian/: changelog  control  copyright
doocs-types-test/src/: EqFctTest.cc  EqFctTest.h  main.cc
include/: doocs_json.h  doocs_json_test.h  doocs_zmq.h
src/: doocs_json.cpp  doocs_json_app.cpp  doocs_rsocket.cpp  doocs_zmq.cpp  doocs_zmq_app.cpp
subprojects/: doocs-clientlib.wrap  libgul14.wrap  rsocket.wrap  tine-5.wrap  zmqpp.wrap
test/: doocs_json_test.cpp  json_test_local.cpp  json_test_remote.cpp
